# cop-cpp

./: README.md  cop.hpp  cop_test.hpp
example/: CMakeLists.txt  EqualityComparable.cpp
sample/: CMakeLists.txt  LessThanComparable.cpp
